# DQMExplore

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
configs/fig_configs/: trackMEs_1D_figconfig.json  trackMEs_2D_figconfig.json  trackMEs_HM_figconfig.json
configs/plots_configs/: trackMEs_1D_plotconfig.json  trackMEs_1Dand2D_plotconfig.json  trackMEs_2D_plotconfig.json  trackMEs_HM_plotconfig.json
notebooks/: 1_MonitoringPlots1D.ipynb  2_MonitoringPlots2D.ipynb  3_TrendPlotting.ipynb  4_CertHelperData.ipynb  5_RunRegistryData.ipynb  README.md
notebooks/explorations/: 1D_me_explore.ipynb
scripts/: 1D_ME_Explore.py  README.md  run_all.py  utils.py
src/dqmexplore/: __init__.py  anomaly.py  certhelper.py  interplt.py  me_ids.py  medata.py  oms.py  omsdata.py  staticplt.py  trends.py
src/dqmexplore/utils/: __init__.py  datautils.py  me_id_map.json  setupdials.py
src/scripts/: fetch_golden.py  fetch_refruns.py  plotMEs.py  search_runs.py
