[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dqmexplore"
version = "1.0.0"
description = "A consolidation of DQM data exploration tools."
authors = [
    {name = "Gabriele Benelli", email = "gabriele.benelli@cern.ch"},
    {name = "Roy F. Cruz", email = "roy.cruz.candelaria@cern.ch"},
    {name = "Tetiana Mazurets", email = "tetiana.mazurets@cern.ch"},
    {name = "Richa Sharma", email = "richa.sharma@cern.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cmsdials[pandas]>=1.5.0",
    "notebook>=7.3.2",
    "runregistry>=3.1.1",
    "plotly>=6.0.0",
    "dask>=2025.2.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2",
]

[project.scripts]
fetch_refruns = "scripts.fetch_refruns:main"
fetch_golden = "scripts.fetch_golden:main"
search_runs = "scripts.search_runs:main"
plotMEs = "scripts.plotMEs:main"

[project.urls]
Repository = "https://github.com/CMSTrackerDPG/DQMExplore"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
